fix horizontal scrollbar on small devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,8 @@
 .overflow-visible {
   overflow: visible;
 }
+
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
